added nu-html checker to task runner, updated form in personal data

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,7 @@ $dark-paragraph: #696969;
 $active-green: green;
 /* Font sizes */
 $paragraph-font-size: 16px;
+$paragraph-primary--small: 14px;
 
 /* Font */
 $brand-font: "Open Sans", Helvetica, Arial;
