--- a/css/style.css
+++ b/css/style.css
@@ -642,26 +642,40 @@ td:hover {
 
 .form-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 20px 10px;
+  padding: 20px 0 0;
 }
 
-.form-box h4,
-.form-box input {
+.form-box i {
+  width: 200px;
+}
+
+.form-box h4 {
   flex: 1;
-  margin: 0 30px;
-  padding: 15px 0;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 600;
   color: #696969;
 }
 
+.column {
+  flex-direction: column;
+}
+
+.form-box {
+  width: 100%;
+  max-width: 450px;
+}
+
 .form-box input {
+  height: 41px;
+  width: 309px;
   border: 2px solid #E3E3E3;
   border-radius: 4px;
-  flex: 3;
   font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  color: #605f5f;
+  font-size: 14px;
 }
 
 .form-box input:hover {
