--- a/css/style.css
+++ b/css/style.css
@@ -803,6 +803,16 @@ td:hover {
   td {
     padding: 15px 5px;
   }
+  .form-box {
+    flex-direction: column;
+  }
+  .form-box i {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .form-box input {
+    width: 100%;
+  }
 }
 
 /* SMALL DEVICES */
