--- a/sass/style.scss
+++ b/sass/style.scss
@@ -699,6 +699,17 @@ td {
   td {
     padding: 15px 5px;
   }
+
+  .form-box {
+    flex-direction: column;
+    i{
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    input {
+      width: 100%;
+    }
+  }
 }
 
 /* SMALL DEVICES */
