--- a/css/style.css
+++ b/css/style.css
@@ -688,6 +688,54 @@ td:hover {
   padding: 30px 0;
 }
 
+/* DETAILS */
+.detail {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+.detail-table {
+  margin: 30px 10px;
+}
+
+.detail-table,
+.detail-row {
+  border: 2px solid #E3E3E3;
+  border-right: none;
+  border-left: none;
+  border-collapse: collapse;
+  overflow-x: hidden;
+}
+
+.detail__text {
+  font-size: 14px;
+  text-align: center;
+  padding: 15px 5px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.detail-table,
+.detail-row,
+.table-head {
+  flex: 1;
+  border-top: none;
+}
+
+#detail-row:hover {
+  background: #f5f5f2;
+  cursor: pointer;
+}
+
+.btn-box {
+  margin: 0 3px 20px;
+}
+
+.btn-box h4 {
+  white-space: nowrap;
+  font-size: 14px;
+}
+
 /* MOBILES */
 @media (max-width: 767px) {
   /* NAV BAR */
