--- a/sass/style.scss
+++ b/sass/style.scss
@@ -551,6 +551,58 @@ td {
   padding: 30px 0;
 }
 
+/* DETAILS */
+
+.detail {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+
+.detail-table {
+  margin: 30px 10px;
+}
+
+.detail-table,
+.detail-row {
+  border: 2px solid $page-shadow;
+  border-right: none;
+  border-left: none;
+  border-collapse: collapse;
+  overflow-x: hidden;
+  
+}
+
+.detail__text {
+  font-size: $paragraph-primary--small;
+  text-align: center;
+  padding: 15px 5px;
+  font-family: $paragraph-font;
+}
+
+.detail-table,
+.detail-row,
+.table-head {
+  flex: 1;
+  border-top: none;
+}
+
+#detail-row {
+  &:hover{
+    background: $primary-icon-hover;
+    cursor: pointer;
+  }
+}
+
+.btn-box{
+  margin: 0 3px 20px;
+  h4{
+    white-space: nowrap;
+    font-size: $paragraph-primary--small;
+  }
+}
+
 /* MOBILES */
 
 @media (max-width: 767px) {
