--- a/css/style.css
+++ b/css/style.css
@@ -693,6 +693,9 @@ td:hover {
   margin-top: 30px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
 }
 
 .detail-table {
@@ -734,6 +737,22 @@ td:hover {
 .btn-box h4 {
   white-space: nowrap;
   font-size: 14px;
+}
+
+.btn-box .arrow {
+  padding-top: 10px;
+}
+
+.btn-box .pager {
+  display: flex;
+}
+
+.btn-box .pager a {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
 /* MOBILES */
