--- a/sass/style.scss
+++ b/sass/style.scss
@@ -557,6 +557,9 @@ td {
   margin-top: 30px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
 }
 
 
@@ -600,7 +603,22 @@ td {
   h4{
     white-space: nowrap;
     font-size: $paragraph-primary--small;
+    font-family: $paragraph-font;
   }
+}
+
+.pager {
+  display: flex;
+}
+
+.pager a {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
 }
 
 /* MOBILES */
