--- a/css/style.css
+++ b/css/style.css
@@ -737,22 +737,51 @@ td:hover {
 .btn-box h4 {
   white-space: nowrap;
   font-size: 14px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-.btn-box .arrow {
-  padding-top: 10px;
+.btn-box i {
+  visibility: hidden;
+  font-size: 10px;
+  padding-top: 3px;
+  padding-left: 5px;
 }
 
-.btn-box .pager {
+.btn-box:hover .header__icon {
+  visibility: visible;
+}
+
+.pager {
   display: flex;
+  margin-bottom: 20px;
 }
 
-.btn-box .pager a {
-  text-decoration: none;
+.pager__item {
+  list-style-type: none;
   display: flex;
   justify-content: center;
   align-items: center;
   flex: 1;
+  padding: 5px 10px;
+  border-radius: 4px;
+}
+
+.pager__item a {
+  color: #56819f;
+  text-decoration: none;
+}
+
+.pager__item:hover {
+  transition: .4s;
+  background: #f5f5f2;
+}
+
+.pager__item:hover a {
+  color: #7ec9ff;
+}
+
+.active {
+  background: #f5f5f2;
 }
 
 /* MOBILES */
