--- a/sass/style.scss
+++ b/sass/style.scss
@@ -605,21 +605,51 @@ td {
     font-size: $paragraph-primary--small;
     font-family: $paragraph-font;
   }
+  i{
+    visibility: hidden; 
+    font-size: 10px;
+    padding-top: 3px;
+    padding-left: 5px;
+  }
+}
+
+.btn-box:hover .header__icon {
+  visibility: visible;
 }
 
 .pager {
   display: flex;
+  margin-bottom: 20px;
 }
 
-.pager a {
-  text-decoration: none;
+.pager__item {
+  list-style-type: none;
+  
   display: flex;
   justify-content: center;
   align-items: center;
   flex: 1;
+  padding: 5px 10px;
+  border-radius: 4px;
+  a{
+    color: $user-color;
+    text-decoration: none;
+  }
+  &:hover {
+    transition: .4s;
+    a {
+      color: $user-color--hover;
+    }
+    background: $primary-icon-hover;
+  }
 }
 
+.active {
+  background: $primary-icon-hover;
 }
+
+
+
 
 /* MOBILES */
 
