--- a/css/style.css
+++ b/css/style.css
@@ -683,6 +683,20 @@ td:hover {
   transition: 0.4s;
 }
 
+input[type="email"],
+input[type="number"],
+input[type="text"] {
+  -webkit-appearance: none;
+}
+
+input[type="email"]:valid {
+  border-color: green;
+}
+
+input[type="email"]:invalid {
+  border-color: red;
+}
+
 .border--bottom {
   border-bottom: 2px solid #E3E3E3;
   padding: 30px 0;
