--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,6 @@
 /* Colors */
 $paragraph-color: #605f5f;
-$danger: red;
+$danger: rgb(255, 0, 0);
 $secondary-color: #ADADAD;
 $page-shadow: #E3E3E3;
 $detali-color: #f58220;
@@ -9,7 +9,7 @@ $user-color:  #56819f;
 $user-color--hover:  #7ec9ff;
 $primary-icon-hover: #f5f5f2;
 $dark-paragraph: #696969;
-$active-green: green;
+$active-green: rgb(2, 158, 2);
 /* Font sizes */
 $paragraph-font-size: 16px;
 $paragraph-primary--small: 14px;
