--- a/sass/_styleguide.scss
+++ b/sass/_styleguide.scss
@@ -77,10 +77,10 @@ div[class^="color"] {
 }
 
 .style-guide-paragraph {
-    font-size: $paragraph-font-size;
+    font-size: 16px;
 }
 
 .style-guide-paragraph-small {
-    font-size: $paragraph-primary--small;
+    font-size: 14px;
 }
 
