--- a/sass/_styleguide.scss
+++ b/sass/_styleguide.scss
@@ -32,47 +32,47 @@ div[class^="color"] {
     margin: 3px;
 }
 
-.color1 {
+.paragraph-color {
     background: #605f5f;
 }
 
-.color2 {
+.danger-color {
     background:  rgb(255, 0, 0);
 }
 
-.color3 {
+.secondary-color {
     background: #ADADAD;
 }
 
-.color4 {
+.page-shadow-color{
     background: #E3E3E3;
 }
 
-.color5 {
+.detail-color {
     background: #f58220;
 }
 
-.color6 {
+.datail-hover-color {
     background: #FFa200;
 }
 
-.color7 {
+.user-color {
     background: #56819f;
 }
 
-.color8 {
+.user-hover-color {
     background:  #7ec9ff;
 }
 
-.color9 {
+.primary-icon-color {
     background: #f5f5f2;
 }
 
-.color10 {
+.paragraph-dark-color {
     background: #696969;
 }
 
-.color11 {
+.active-green-color {
     background: rgb(2, 158, 2);
 }
 
