latest update on styleguide file

--- a/sass/_styleguide.scss
+++ b/sass/_styleguide.scss
@@ -84,3 +84,11 @@ div[class^="color"] {
     font-size: 14px;
 }
 
+.input-accepted {
+    border: 2px solid green;
+}
+
+.input-declined {
+    border: 2px solid red;
+}
+
